force-app/zurich-base/main/default/objects/NTSUser__mdt/NTSUser__mdt.object-meta.xml
<CustomObject>
    <description>Almacenar los datos del usuario genérico de NTS correspondientes a los diferentes entornos.</description>
    <label>NTS User</label>
    <pluralLabel>NTS Users</pluralLabel>
</CustomObject>