force-app/zurich-base/main/default/objects/NTSUser__mdt/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Alias del usuario</description>
    <label>Alias</label>
    <length>10</length>
    <type>Text</type>
</CustomField>