force-app/zurich-base/main/default/objects/NTSUser__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Correo electtrónico usuario NTS</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>