force-app/zurich-base/main/default/objects/NTSUser__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Entorno donde se encuentra activo el usuario NTS.</description>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
                <label>Production</label>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
                <label>Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>