force-app/zurich-base/main/default/objects/NTSUser__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nombre usuario NTS</description>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>