force-app/zurich-base/main/default/objects/NTSUser__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Nombre del usuario</description>
    <label>Username</label>
    <type>Email</type>
</CustomField>